@@ -1,0 +1,5 @@
+﻿Name,Name Latein,Anzahl,Datum,Latitude,Longitude,Notizen,
+Eichelhäher,Garrulus glandarius,1,12/08/2021 08:53,47.38251337757379,8.538609892129898,,
+Höckerschwan,Cygnus olor,1,12/08/2021 08:54,47.382475011912476,8.538638055324554,,
+Schwanzmeise,Aegithalos caudatus,1,12/08/2021 08:55,47.38250111872646,8.538665547966955,,
+Straßentaube,Columba livia f. domestica,1,12/08/2021 08:55,47.382505205009224,8.53862900286913,,
