@@ -6,6 +6,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 == Unreleased
 
+=== Added
+
+- Support species lists from Vogelführer Birdlife Schweiz
+
 == 0.6.0 - 2021-11-20
 
 === Fixed
